Checkpoint: 完成了量化交易开源方案调研与搭建计划的交互式网站。包含： - 完整的框架对比分析（VectorBT、Backtrader、VeighNa、Lean、Freqtrade、Qlib） - 推荐技术栈和数据存储方案对比 - 五阶段搭建计划详解 - 风险管理和应对措施 - 深蓝色技术主题设计 - 响应式布局，支持各种设备

--- a/client/index.html
+++ b/client/index.html
@@ -7,11 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>量化交易系统搭建指南</title>    
-    <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
+    <meta name="description" content="量化交易系统调研与搭建指南 - 详细的开源方案对比和实施计划" />
+    <meta name="keywords" content="量化交易,算法交易,开源框架,Backtrader,VeighNa,Freqtrade,Lean" />
+    <meta name="author" content="Manus AI" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    THIS IS THE END OF A COMMENT BLOCK, BLOCK TO BE DELETED -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
 
   <body>
